# SO

./: .gitignore  BUILD.sh  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  create_launchpad_service
charms/layers/: .gitignore
charms/layers/sshproxy/: actions.yaml  config.yaml
charms/layers/sshproxy/reactive/: sshproxy.py
charms/layers/sshproxy/tests/: 00-setup  10-deploy
charms/layers/vnfproxy/: actions.yaml  layer.yaml  metadata.yaml
charms/layers/vnfproxy/actions/: reboot  restart  start  stop
charms/layers/vnfproxy/tests/: 10-deploy
common/: CMakeLists.txt  rw_gen_package.py
common/plugins/rwcntmgrtasklet/: CMakeLists.txt
common/plugins/yang/: CMakeLists.txt  rw-cloud.tailf.yang  rw-cloud.yang  rw-config-agent.tailf.yang  rw-config-agent.yang  rw-sdn.tailf.yang  rw-sdn.yang
common/python/: CMakeLists.txt
common/python/rift/downloader/: base.py  url.py
common/python/rift/mano/: ncclient.py
common/python/test/: CMakeLists.txt  utest_config_data.py
examples/: CMakeLists.txt
examples/ping_pong_ns/: CMakeLists.txt  config_desc.py  generate_packages.sh.in  stand_up_ping_pong
models/: CMakeLists.txt
models/openmano/src/: CMakeLists.txt  generate_tidgen_packages.sh.in  openmano2rift.py
models/plugins/yang/: CMakeLists.txt  mano-types.yang  nsd.yang  nsr.tailf.yang  nsr.yang  odl-network-topology.yang  pnfd.yang  rw-nsr.tailf.yang  rw-nsr.yang  rw-vlr.yang  rw-vnfd.yang  rw-vnfr.tailf.yang  rw-vnfr.yang  vlr.tailf.yang  vlr.yang  vnfd.yang  vnfr.tailf.yang  vnfr.yang
rwcal/: CMakeLists.txt
rwcal/include/riftware/: rwcal-api.h
rwcal/plugins/rwcalproxytasklet/: CMakeLists.txt
rwcal/plugins/vala/: CMakeLists.txt  rwcal.vala
rwcal/plugins/vala/rwcal_aws/: CMakeLists.txt  rwcal_aws.py
rwcal/plugins/vala/rwcal_brocadevcpe/: CMakeLists.txt  rwcal_propcloud1.py
rwcal/plugins/vala/rwcal_cloudsim/: CMakeLists.txt  rwcal_cloudsim.py
rwcal/plugins/vala/rwcal_cloudsimproxy/: CMakeLists.txt  rwcal_cloudsimproxy.py
rwcal/plugins/vala/rwcal_mock/: CMakeLists.txt  rwcal_mock.py
rwcal/plugins/vala/rwcal_openmano/: CMakeLists.txt  (+1 more)
rwcal/plugins/yang/: CMakeLists.txt  rwcal.yang
rwcal/rift/cal/: client.py  rwcal_status.py
rwcal/src/: CMakeLists.txt
rwcal/test/: CMakeLists.txt  aws_resources.py  cloudtool_cal.py  ec2.py  openstack_resources.py  test_container_cal.py  test_openstack_install.py  test_rwcal_openstack.py
rwcal/test/cal_module_test/: CMakeLists.txt
rwcm/: CMakeLists.txt
rwcm/plugins/rwconman/: CMakeLists.txt
rwcm/plugins/yang/: CMakeLists.txt  rw-conman.tailf.yang  rw-conman.yang
rwcm/test/: CMakeLists.txt  rwso_test.py
rwlaunchpad/: CMakeLists.txt
rwlaunchpad/plugins/: CMakeLists.txt
rwlaunchpad/plugins/cli/: CMakeLists.txt  cli_launchpad_schema_listing.txt
rwlaunchpad/plugins/rwautoscaler/: CMakeLists.txt
rwlaunchpad/plugins/rwimagemgr/: CMakeLists.txt
rwlaunchpad/plugins/rwlaunchpadtasklet/: CMakeLists.txt
rwlaunchpad/plugins/rwmonitor/: CMakeLists.txt
rwlaunchpad/plugins/rwmonparam/: CMakeLists.txt
rwlaunchpad/plugins/rwnsm/: CMakeLists.txt
rwlaunchpad/plugins/rwpkgmgr/: CMakeLists.txt
rwlaunchpad/plugins/rwresmgr/: CMakeLists.txt
rwlaunchpad/plugins/rwstagingmgr/: CMakeLists.txt
rwlaunchpad/plugins/rwvnfm/: CMakeLists.txt
rwlaunchpad/plugins/rwvns/: CMakeLists.txt
rwlaunchpad/plugins/yang/: CMakeLists.txt  rw-image-mgmt.tailf.yang  rw-image-mgmt.yang  rw-launchpad.tailf.yang  rw-launchpad.yang  rw-monitor.yang  rw-nsm.yang  rw-pkg-mgmt.tailf.yang  rw-pkg-mgmt.yang  rw-resource-mgr.tailf.yang  rw-resource-mgr.yang  rw-staging-mgmt.tailf.yang  rw-staging-mgmt.yang  rw-vnfm.yang  rw-vns.yang
rwlaunchpad/ra/: CMakeLists.txt  pingpong_scaling_systest  pingpong_vnf_reload_systest
rwlaunchpad/ra/pytest/: conftest.py  test_failover.py  test_launchpad.py  test_start_standby.py
rwlaunchpad/ra/pytest/multivm_vnf/: conftest.py  test_multi_vm_vnf_slb.py  test_multi_vm_vnf_trafgen.py  test_trafgen_data.py
rwlaunchpad/ra/pytest/ns/: conftest.py  test_multiple_ns_instantiation.py  test_onboard.py
rwlaunchpad/ra/pytest/ns/haproxy/: test_scaling.py
rwlaunchpad/ra/pytest/ns/pingpong/: test_pingpong.py  test_pingpong_longevity.py  test_records.py  test_scaling.py
rwlaunchpad/ra/racfg/: embedded_images_vnf_multiple_accounts_systest_openstack.racfg  l2port_chaining_systest_openstack.racfg  metadata_vdud_systest_openstack.racfg  multi_tenant_systest_openstack.racfg  multivm_vnf_slb_systest.racfg  multivm_vnf_trafgen_systest.racfg  ns_instantiate_memory_check.racfg  onboard_delete_vnfs_systest_openstack.racfg  pingpong_lp_ha_systest_openstack.racfg  pingpong_metadata_vdud_systest_openstack.racfg  pingpong_multidisk_systest_openstack.racfg  pingpong_multidisk_systest_openstack_xml.racfg  pingpong_portsecurity_systest_openstack.racfg  pingpong_records_systest_cloudsim.racfg  pingpong_records_systest_openstack.racfg  pingpong_records_systest_openstack_xml.racfg  pingpong_scaling_systest_openstack.racfg  pingpong_staticip_systest_openstack.racfg  pingpong_staticip_systest_openstack_ipv6.racfg  pingpong_update_descriptors_instantiate_systest_openstack.racfg  pingpong_vnf_dependencies_systest_openstack.racfg  pingpong_vnf_dependencies_systest_openstack_xml.racfg  pingpong_vnf_reload_systest_openstack.racfg  pingpong_vnf_reload_systest_openstack_xml.racfg  pingpong_vnf_systest_cloudsim.racfg  pingpong_vnf_systest_openstack.racfg  recovery_systest.racfg  scaling_systest.racfg
rwlaunchpad/test/: CMakeLists.txt  launchpad.py  launchpad_recovery  mano_error_ut.py  mano_ut.py  mgmt_recovery.py  utest_nsr_handler.py  utest_ro_account.py  utest_rwmonitor.py  utest_rwnsm.py  utest_scaling_rpc.py
rwlaunchpad/test/pytest/: lp_kt_utm_test.py  lp_kt_utm_wims_test.py  lp_test.py  lp_tg_2vrouter_ts_epa_test.py  lp_tg_2vrouter_ts_test.py  lp_tg_vrouter_ts_epa_sriov_test.py
rwlaunchpad/test/racfg/: lprecovery_test.racfg
rwmon/: CMakeLists.txt
rwmon/plugins/vala/: CMakeLists.txt
rwmon/plugins/yang/: CMakeLists.txt  rwmon.yang
rwmon/test/: utest_rwmon.py
rwso/plugins/yang/: rw-sorch-log.yang
(+337 files in other folders)
